templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:
  labels:
    app:
  namespace: %namespace%
spec:
  replicas:
  selector:
    matchLabels:
      app: 
  template:
    metadata:
      labels:
        app: 
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
