templates/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 
  namespace: %namespace%
spec:
  containers:
  - name:
    image:
