templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:
  namespace: %namespace%
spec:
  selector:
  ports:
    - protocol: TCP
      port:
      targetPort:
